# emgsvm

./: .gitignore  README.md  afe.md  bom.csv  res_match.py  scope_adc.py  svm.kicad_pcb  svm.kicad_pro  svm.kicad_sch  svm.kicad_sch-bak
adc/: adc.kicad_pcb  adc.kicad_prl  adc.kicad_pro  adc.kicad_sch  ~adc.kicad_pcb.lck
adc/jlcpcb/: project.db
adc/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
adc/sw/: Cargo.toml  README.md  rust-toolchain.toml  shell.nix  simsamadc.hex
adc/sw/.cargo/: config.toml
adc/sw/src/: main.rs  regs.rs
components/INA128PA/: part_info.txt
components/INA128PA/Allegro/: DIP794W53P254L959H508Q8N.dra  c113_h73.pad  s113_h73.pad
components/INA128PA/Altium/: DIP794W53P254L959H508Q8N.PcbLib  INA128PA.SchLib  INA128PA.epw
components/INA128PA/CADSTAR/: DIP794W53P254L959H508Q8N.cpa  INA128PA.csa  INA128PA.lib
components/INA128PA/CR-5000/: INA128PA.laf
components/INA128PA/CR-8000/: DIP794W53P254L959H508Q8N.ftf  INA128PA.cdf
components/INA128PA/Capture/: INA128PA.xml
components/INA128PA/DipTrace/: INA128PA.asc
components/INA128PA/Easy-PC/: INA128PA.epl
components/INA128PA/EasyEDA/: INA128PA.lbr
components/INA128PA/KiCad/: DIP794W53P254L959H508Q8N.kicad_mod  INA128PA.dcm  INA128PA.kicad_sym  INA128PA.lib  INA128PA.mod
components/INA128PA/OrCAD_Allegro16/: INA128PA.edf
components/INA128PA/PADS/: DIP794W53P254L959H508Q8N.d  INA128PA.c  INA128PA.p
components/INA128PA/Proteus/: INA128PA.pdif  INA128PA.pdspart
components/INA128PA/Pulsonix/: INA128PA.plx
components/INA128PA/Quadcept/: INA128PA.xml
components/INA128PA/TARGET 3001!/: INA128PA.cxf
components/INA128_TINA_AIO/: INA128.TLD
components/sloj174/: tl431.mod
spice/: all.asc  diffamp.asc  hpf.asc  lpf.asc  tl431.lib  vreg.asc
svm/: svm.kicad_prl  svm.kicad_pro
(+226 files in other folders)
