[package]
name = "simsamadc"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0.3", default-features = false, features = ["cortex-m-systick", "imxrt_gpt1"] }

imxrt-log = { version = "0.1", default-features = false, features = ["log", "usbd"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

teensy4-panic = { version = "0.2", features = ["log"] }
nb = "1.1.0"
embedded-io = "0.6.1"

[dependencies.teensy4-bsp]
version = "0.5"
features = [
    # Use the BSP's runtime.
    "rt",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
